tests/data/parseerror/invalid-class-2.php
<?php

interface TokenReflection_Test_ParseInvalidClass12 implements Countable
{

}
